added links to speakers

--- a/index.html
+++ b/index.html
@@ -326,19 +326,19 @@
             </tr>
             <tr>
               <td>13:05-13:40</td>
-              <td>Hyowon Gweon </td>
+              <td> <a href="http://sll.stanford.edu/">Hyowon Gweon</a></td>
               <td>Live</td>
               <td>Towards socially intelligent, embodied AI: Insights from how humans learn and help others learn</td>
             </tr>
             <tr>
               <td>13:40-14:15</td>
-              <td>Leslie Kaelbling </td>
+              <td> <a href="https://www.csail.mit.edu/person/leslie-kaelbling">Leslie Kaelbling</a></td>
               <td>Live</td>
               <td>Where's the Fork? Representation and Reasoning for a Household Robot</td>
             </tr>
             <tr>
               <td>14:15-14:50</td>
-              <td>Kristen Grauman </td>
+              <td><a href="https://www.cs.utexas.edu/users/grauman/">Kristen Grauman</a></td>
               <td>Recorded</td>
               <td>Shaping Agent Behavior with Video of People’s Daily Life Activity</td>
             </tr>
@@ -346,35 +346,35 @@
               <td>14:50-15:20</td>
               <td>Organizers </td>
               <td>Live</td>
-              <td> Presenting BEHAVIOR Challenge, Analysis of Baselines </td>
+              <td> Presenting BEHAVIOR Challenge and analysis of baselines </td>
             </tr>
             <tr>
               <td>15:20-15:40</td>
               <td> </td>
               <td> </td>
-              <td> Coffee Break </td>
+              <td> <a href="https://www.youtube.com/watch?v=zs5DR-cgNeY&ab_channel=RelaxCafeMusic">Coffee Break</a></td>
             </tr>
             <tr>
               <td>15:40-16:15</td>
-              <td>Chelsea Finn</td>
+              <td><a href="https://ai.stanford.edu/~cbfinn/">Chelsea Finn</a></td>
               <td>Live</td>
               <td>Compositional Task Generalization in Vision-Based Robotic Manipulation </td>
             </tr>
             <tr>
               <td>16:15-16:50</td>
-              <td>Jeff Zacks</br>Matthew&nbsp;Bezdek</br>Tan Nguyen</td>
+              <td><a href="https://dcl.wustl.edu/people/jzacks/">Jeff Zacks</a></br><a href="https://dcl.wustl.edu/people/matt-bezdek/">Matthew&nbsp;Bezdek</a></br><a href="https://dcl.wustl.edu/people/tan-nguyen/">Tan Nguyen</a></td>
               <td>Recorded</td>
               <td> <a href="https://drive.google.com/file/d/1LTIVflVw7D-6C7cwVIH1PAx_MJWkc7mT/view?usp=sharing">The Multi-angle Extended Three-D Activities Corpus - A Resource for Human and Robot Event Understanding <a></a> </td>
             </tr>
             <tr>
               <td>16:50-17:25</td>
-              <td>Jeannette Bohg </td>
+              <td><a href="https://web.stanford.edu/~bohg/">Jeannette Bohg </a></td>
               <td> Live </td>
               <td> Robots Learning Activities of Daily Living by Watching Humans </td>
             </tr>
             <tr>
               <td>17:25-18:00</td>
-              <td>Karen Liu </td>
+              <td><a href="https://ckllab.stanford.edu/c-karen-liu">Karen Liu</a></td>
               <td> Recorded </td>
               <td> <a href="https://drive.google.com/file/d/1vBiHJOuCDzAnqtNhWg7rFhGF1Gfe4j_I/view?usp=sharing">Simulating Human Movements for Embodied AI</a> </td>
             </tr>
