fixing ff picture

--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
               <div class="col-md-1">
                 <a href="https://engineering.stanford.edu/people/fei-fei-li" align="middle">
                   <img
-                    src="https://engineering.stanford.edu/sites/default/files/styles/large-square/public/9818d36da9c8e04dc45603a690b1e7ce.jpg?itok=s_I8jyVm"
+                    src="https://engineering.stanford.edu/sites/default/files/styles/medium_square/public/media/person/fei-fei-li1550534393295.jpg"
                     class="img-circle img-responsive"
                   >
                   Li Fei-Fei
