--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
               <td>14:15-14:50</td>
               <td><a href="https://www.cs.utexas.edu/users/grauman/">Kristen Grauman</a></td>
               <td>Recorded</td>
-              <td>Shaping Agent Behavior with Video of People’s Daily Life Activity</td>
+              <td><a href="https://drive.google.com/file/d/1dNsTLbnqDXX7gAm4KIGQEgkWPmT5gjoI/view?usp=sharing">Shaping Agent Behavior with Video of People’s Daily Life Activity</a></td>
             </tr>
             <tr>
               <td>14:50-15:20</td>
