--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
               <td>13:05-13:40</td>
               <td> <a href="http://sll.stanford.edu/">Hyowon Gweon</a></td>
               <td>Live</td>
-              <td>Towards socially intelligent, embodied AI: Insights from how humans learn and help others learn</td>
+              <td>Towards “Smarter” Embodied AI: Insights from Developmental Cognitive Science</td>
             </tr>
             <tr>
               <td>13:40-14:15</td>
