--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
         <div class="section-header">
           <div class="col-lg-12 col-md-12">
             <h2>Organizers and Contact</h2>
-            The iGibson Challenge 2021 is organized by the <a href="http://svl.stanford.edu">Stanford Vision and
+            The BEHAVIOR Challenge 2021 is organized by the <a href="http://svl.stanford.edu">Stanford Vision and
               Learning Lab</a>. For any inquires, contact us at <a
               href="mailto:behavior.benchmark@gmail.com">behavior.benchmark@gmail.com</a>
             <p></p>
