--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
               <td>13:05-13:40</td>
               <td> <a href="http://sll.stanford.edu/">Hyowon Gweon</a></td>
               <td>Live</td>
-              <td>Towards “Smarter” Embodied AI: Insights from Developmental Cognitive Science</td>
+              <td><a href="https://drive.google.com/file/d/1snwsyV3zs_OM4JTnya8OQbJcfmFE73Y3/view?usp=sharing">Towards “Smarter” Embodied AI: Insights from Developmental Cognitive Science</a></td>
             </tr>
             <tr>
               <td>13:40-14:15</td>
@@ -346,7 +346,7 @@
               <td>14:50-15:20</td>
               <td>Organizers </td>
               <td>Live</td>
-              <td> Presenting BEHAVIOR Challenge and analysis of baselines </td>
+              <td> <a href="https://drive.google.com/file/d/1UVWJfuJSGDwLmcsRKJEWcTI67ODeU3Ha/view?usp=sharing">Presenting BEHAVIOR Challenge and analysis of baselines</a> </td>
             </tr>
             <tr>
               <td>15:20-15:40</td>
