add all video links

--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
               <td>13:40-14:15</td>
               <td> <a href="https://www.csail.mit.edu/person/leslie-kaelbling">Leslie Kaelbling</a></td>
               <td>Live</td>
-              <td>Where's the Fork? Representation and Reasoning for a Household Robot</td>
+              <td><a href="https://drive.google.com/file/d/1E7pZwMMF01EiMx-hKZY4hz8vizJCUcfl/view?usp=sharing">Where's the Fork? Representation and Reasoning for a Household Robot </a></td>
             </tr>
             <tr>
               <td>14:15-14:50</td>
@@ -358,7 +358,7 @@
               <td>15:40-16:15</td>
               <td><a href="https://ai.stanford.edu/~cbfinn/">Chelsea Finn</a></td>
               <td>Live</td>
-              <td>Compositional Task Generalization in Vision-Based Robotic Manipulation </td>
+              <td><a href="https://drive.google.com/file/d/14XhoDytk_i3fistSh6FF3UO9xA1QW7Fh/view?usp=sharing">Compositional Task Generalization in Vision-Based Robotic Manipulation</a> </td>
             </tr>
             <tr>
               <td>16:15-16:50</td>
@@ -370,7 +370,7 @@
               <td>16:50-17:25</td>
               <td><a href="https://web.stanford.edu/~bohg/">Jeannette Bohg </a></td>
               <td> Live </td>
-              <td> Robots Learning Activities of Daily Living by Watching Humans </td>
+              <td> <a href="https://drive.google.com/file/d/1mTzjPE0_YtexhE_2yHvD4_uHjWsyUctr/view?usp=sharing">Robots Learning Activities of Daily Living by Watching Humans</a> </td>
             </tr>
             <tr>
               <td>17:25-18:00</td>
