--- a/human_demonstrations/demo_template.html
+++ b/human_demonstrations/demo_template.html
@@ -41,18 +41,18 @@
             <h2> Downloading the dataset </h2>
             The human dataset is large (~150 gb with compressed hdf5s) and growing. We recommend using the  <a href="https://cloud.google.com/sdk/docs/quickstart#deb">google-cloud-sdk</a> to download our dataset.  We will be uploading additional demonstrations as they finish processing, up to a total of 500. Please report any issues. <br>
             <br>
+            gsutil -m rsync gs://gibsonchallenge/behavior_trajectories_v0.4.0 ./behavior_trajectories_v0.4.0 <br>
+            <br>
             The entire dataset processed for reinforcement learning (action, all observation modalities) can be downloaded with the following command:<br>
             <br>
-            gsutil -m rsync gs://gibsonchallenge/behavior_human_demos_v2 ./behavior_human_demos_v2 <br>
+            To download the raw human demonstrations hdf5s, which include eyetracking and individual pose of the VR sensors, please use the following command:<br>
             <br>
-            To download the raw hdf5s, which include eyetracking and individual pose of the VR sensors, please use the following command:<br>
+            gsutil -m rsync gs://gibsonchallenge/behavior_human_demos_v0.4.0 ./behavior_human_demos_v0.4.0 <br>
             <br>
-            gsutil -m rsync gs://gibsonchallenge/behavior_human_demos_raw ./behavior_human_demos_raw<br>
-            <hr>
           </div>
           <h2>Individual BEHAVIOR demonstrations</h2>
              {% for demo_urlstring in demo_list %}
-             <li><a href="https://storage.googleapis.com/gibsonchallenge/behavior_human_demos_v2/{{ demo_urlstring}}">{{demo_urlstring}}</a></li>
+             <li><a href="https://storage.googleapis.com/gibsonchallenge/behavior_human_demos_v0.4.0/{{ demo_urlstring}}">{{demo_urlstring}}</a></li>
              {% endfor %}
 </body>
 </html>
